==> whowechina/chu_pico/firmware/src/vl53l0x.c <==
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "hardware/i2c.h"
#include "board_defs.h"
#include "vl53l0x.h"
#define VL53L0X_DEF_ADDR 0x29
#define IO_TIMEOUT_US 1000
#define TOF_WAIT_US 200000
#define decodeVcselPeriod(reg_val) (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define INSTANCE_NUM (sizeof(instances) / sizeof(instances[0]))

void write_reg(uint8_t reg, uint8_t value)
{
    uint8_t data[2] = { reg, value };
    i2c_write_blocking_until(I2C_PORT, addr, data, 2, false, time_us_64() + IO_TIMEOUT_US);
}

uint8_t read_reg(uint8_t reg)
{
    uint8_t value;
    i2c_write_blocking_until(I2C_PORT, addr, &reg, 1, true, time_us_64() + IO_TIMEOUT_US);
    i2c_read_blocking_until(I2C_PORT, addr, &value, 1, false, time_us_64() + IO_TIMEOUT_US);
    return value;
}

void vl53l0x_init(i2c_inst_t *i2c_port, uint8_t i2c_addr)
{
    port = i2c_port;
    if (i2c_addr != 0) {
        addr = i2c_addr;
    }
}

bool setMeasurementTimingBudget(int index, uint32_t budget_us)
{
    SequenceStepEnables enables;
    SequenceStepTimeouts timeouts;

    uint16_t const StartOverhead = 1320; // different than the value in get_
    uint16_t const EndOverhead = 960;
    uint16_t const MsrcOverhead = 660;
    uint16_t const TccOverhead = 590;
    uint16_t const DssOverhead = 690;
    uint16_t const PreRangeOverhead = 660;
    uint16_t const FinalRangeOverhead = 550;

    uint32_t const MinTimingBudget = 20000;

    if (budget_us < MinTimingBudget) {
        return false;
    }

    uint32_t used_budget_us = StartOverhead + EndOverhead;

    getSequenceStepEnables(&enables);
    getSequenceStepTimeouts(&enables, &timeouts);

    if (enables.tcc) {
        used_budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);
    }

    if (enables.dss) {
        used_budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
    } else if (enables.msrc) {
        used_budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);
    }

    if (enables.pre_range) {
        used_budget_us += (timeouts.pre_range_us + PreRangeOverhead);
    }

    if (enables.final_range) {
        used_budget_us += FinalRangeOverhead;

        // "Note that the final range timeout is determined by the timing
        // budget and the sum of all other timeouts within the sequence.
        // If there is no room for the final range timeout, then an error
        // will be set. Otherwise the remaining time will be applied to
        // the final range."

        if (used_budget_us > budget_us)
        {
            // "Requested timeout too big."
            return false;
        }

        uint32_t final_range_timeout_us = budget_us - used_budget_us;

        // set_sequence_step_timeout() begin
        // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

        // "For the final range timeout, the pre-range timeout
        //    must be added. To do this both final and pre-range
        //    timeouts must be expressed in macro periods MClks
        //    because they have different vcsel periods."

        uint32_t final_range_timeout_mclks =
            timeoutMicrosecondsToMclks(final_range_timeout_us,
                                       timeouts.final_range_vcsel_period_pclks);

        if (enables.pre_range) {
            final_range_timeout_mclks += timeouts.pre_range_mclks;
        }

        write_reg16(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
            encodeTimeout(final_range_timeout_mclks));

        // set_sequence_step_timeout() end

        instances[index].timing_budget_us = budget_us; // store for internal reuse
    }
    return true;
}

void vl53l0x_start_continuous(int index)
{
    if (index >= INSTANCE_NUM) {
        return;
    }

    write_reg(0x80, 0x01);
    write_reg(0xFF, 0x01);
    write_reg(0x00, 0x00);
    write_reg(0x91, instances[index].stop_variable);
    write_reg(0x00, 0x01);
    write_reg(0xFF, 0x00);
    write_reg(0x80, 0x00);

    write_reg(SYSRANGE_START, 0x02); // VL53L0X_REG_SYSRANGE_MODE_BACKTOBACK
}

uint16_t readRangeContinuousMillimeters(int index)
{
    if (index >= INSTANCE_NUM) {
        return 65535;
    }

    if ((read_reg(RESULT_INTERRUPT_STATUS) & 0x07) == 0) {
        return instances[index].range; // use last result
    }

    // assumptions: Linearity Corrective Gain is 1000 (default);
    // fractional ranging is not enabled
    instances[index].range = read_reg16(RESULT_RANGE_STATUS + 10);

    write_reg(SYSTEM_INTERRUPT_CLEAR, 0x01);

    return instances[index].range;
}

uint16_t readRangeSingleMillimeters(int index)
{
    static uint16_t range = 65535;
    static bool reading = false;
    static uint64_t start_time = 0;

    uint64_t now = time_us_64();
    if (now - start_time > TOF_WAIT_US) {
        reading = false;
    }

    if (reading) {
        if ((read_reg(SYSRANGE_START) & 0x01) == 0) {
            range = readRangeContinuousMillimeters(index);
            reading = false;
        }
    } else {
        write_reg(0x80, 0x01);
        write_reg(0xFF, 0x01);
        write_reg(0x00, 0x00);
        write_reg(0x91, instances[index].stop_variable);
        write_reg(0x00, 0x01);
        write_reg(0xFF, 0x00);
        write_reg(0x80, 0x00);

        write_reg(SYSRANGE_START, 0x01);
        start_time = now;
        reading = true;
    }
    return range;
}

bool getSpadInfo(uint8_t *count, bool *type_is_aperture)
{
    write_reg_list(reg_spad0);
    write_reg(0x83, read_reg(0x83) | 0x04);
    write_reg_list(reg_spad1);

    uint64_t start = time_us_64();
    while (read_reg(0x83) == 0x00) {
        if (time_us_64() - start > TOF_WAIT_US) {
            return false;
        }
        sleep_ms(1);
    }

    write_reg(0x83, 0x01);

    uint8_t tmp = read_reg(0x92);
    *count = tmp & 0x7f;
    *type_is_aperture = (tmp & 0x80);

    write_reg(0x81, 0x00);
    write_reg(0xFF, 0x06);

    write_reg(0x83, read_reg(0x83) & ~0x04);

    write_reg_list(reg_spad2);

    return true;
}

void getSequenceStepEnables(SequenceStepEnables * enables)
{
    uint8_t seq_cfg = read_reg(SYSTEM_SEQUENCE_CONFIG);

    enables->tcc         = (seq_cfg >> 4) & 0x1;
    enables->dss         = (seq_cfg >> 3) & 0x1;
    enables->msrc        = (seq_cfg >> 2) & 0x1;
    enables->pre_range   = (seq_cfg >> 6) & 0x1;
    enables->final_range = (seq_cfg >> 7) & 0x1;
}

void getSequenceStepTimeouts(SequenceStepEnables const * enables, SequenceStepTimeouts * timeouts)
{
    timeouts->pre_range_vcsel_period_pclks = getVcselPulsePeriod(VcselPeriodPreRange);

    timeouts->msrc_dss_tcc_mclks = read_reg(MSRC_CONFIG_TIMEOUT_MACROP) + 1;
    timeouts->msrc_dss_tcc_us =
        timeoutMclksToMicroseconds(timeouts->msrc_dss_tcc_mclks,
                                   timeouts->pre_range_vcsel_period_pclks);

    timeouts->pre_range_mclks =
        decodeTimeout(read_reg16(PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI));
    timeouts->pre_range_us =
        timeoutMclksToMicroseconds(timeouts->pre_range_mclks,
                                   timeouts->pre_range_vcsel_period_pclks);

    timeouts->final_range_vcsel_period_pclks = getVcselPulsePeriod(VcselPeriodFinalRange);

    timeouts->final_range_mclks =
        decodeTimeout(read_reg16(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI));

    if (enables->pre_range) {
        timeouts->final_range_mclks -= timeouts->pre_range_mclks;
    }

    timeouts->final_range_us =
        timeoutMclksToMicroseconds(timeouts->final_range_mclks,
                                   timeouts->final_range_vcsel_period_pclks);
}

bool performSingleRefCalibration(uint8_t vhv_init_byte)
{
    write_reg(SYSRANGE_START, 0x01 | vhv_init_byte); // VL53L0X_REG_SYSRANGE_MODE_START_STOP

    uint64_t start = time_us_64();
    while ((read_reg(RESULT_INTERRUPT_STATUS) & 0x07) == 0) {
        if (time_us_64() - start > TOF_WAIT_US) {
            return false;
        }
        sleep_ms(1);
    }

    write_reg(SYSTEM_INTERRUPT_CLEAR, 0x01);
    write_reg(SYSRANGE_START, 0x00);

    return true;
}
